--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Welcome!!!
+title: What is AI?
+date: 2022-07-06
 author: Harsha Wijesekara
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
